# py-st

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  pyproject.toml
.continue/rules/: claude.md  overview.md
.github/workflows/: ci.yml
cache/: SCHEMA.md
src/py_st/: _manual_models.py  api_client.py  cache.py  cli.py  client.py  env.py  models.py  services.py
src/py_st/_generated/models/: ActivityLevel.py  Agent.py  Chart.py  ConnectedSystem.py  Construction.py  ConstructionMaterial.py  Contract.py  ContractDeliverGood.py  ContractPayment.py  ContractTerms.py  Cooldown.py  Extraction.py  ExtractionYield.py  Faction.py  FactionSymbol.py  FactionTrait.py  FactionTraitSymbol.py  JumpGate.py  Market.py  MarketTradeGood.py  MarketTransaction.py  Meta.py  RepairTransaction.py  ScannedShip.py  ScannedSystem.py  (+52 more)
src/py_st/cli/: _errors.py  _helpers.py  agent_cmd.py  app.py  contracts_cmd.py  options.py  ships_cmd.py  systems_cmd.py
src/py_st/client/: __init__.py  client.py  transport.py
src/py_st/services/: __init__.py  agent.py  cache_keys.py  cache_merge.py  contracts.py  ships.py  systems.py
tests/: conftest.py  factories.py  test_cache.py  test_cache_keys.py  test_cache_merge.py  test_cli_contracts.py  test_cli_enum_validation.py  test_cli_error_handling.py  test_cli_helpers.py  test_cli_ships.py  test_cli_systems.py  test_client_integration.py  test_client_unit.py  test_services_agent.py  test_services_cache.py  test_services_contracts.py  test_services_ships.py  test_services_waypoints.py  test_smoke.py
tools/: gen_model_aliases.py  gen_model_init.py  inject_titles.py
(+81 files in other folders)
