[project]
name = "py-st"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "pydantic",
  "tenacity",
  "typer",
  "python-dotenv",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
lint.select = ["E","F","I","UP","B","SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
