[project]
name = "py-st"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "pydantic",
  "tenacity",
  "typer",
  "python-dotenv",
  "responses>=0.25.0",
]

[tool.black]
line-length = 79
extend-exclude = "src/py_st/_generated"

[tool.ruff]
line-length = 79
exclude = [
  "src/py_st/_generated",
]
lint.select = ["E","F","I","UP","B","SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "py_st._generated.*"
ignore_errors = true
