[project]
name = "py-st"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx",
  "pydantic",
  "tenacity",
  "typer",
  "python-dotenv",
  "responses>=0.25.0",
]

[tool.black]
line-length = 79
extend-exclude = "src/py_st/_generated"

[tool.ruff]
line-length = 79
fix = true
exclude = [
  "src/py_st/_generated",
]
lint.select = ["E","F","I","UP","B","SIM"]
lint.extend-select = ["W505"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "py_st._generated.*"
ignore_errors = true
